<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/foodFactsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_dimmed"
    tools:context=".fragment.FoodFactsFragment">

    <ImageView
        android:id="@+id/detail_food_image"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:contentDescription="@string/picture_of_the_food"
        android:src="@drawable/pexels_valeria_boltneva_1639562_xml_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_food_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/hamburger"
        android:textColor="@color/cream"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_food_image" />

    <TextView
        android:id="@+id/detail_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="2dp"
        android:gravity="center"
        android:text="@string/kalori"
        android:textColor="@color/cream"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_fire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_food_title"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/detail_carbohydrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="2dp"
        android:gravity="center"
        android:text="@string/karbohidrat"
        android:textColor="@color/cream"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_flash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_calories" />

    <TextView
        android:id="@+id/detail_protein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="304dp"
        android:drawablePadding="2dp"
        android:gravity="center"
        android:text="@string/protein"
        android:textColor="@color/cream"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_muscle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_carbohydrate" />

    <TextView
        android:id="@+id/detail_fat_acid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="2dp"
        android:text="@string/lemak"
        android:textColor="@color/cream"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_trans_fats_free"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_protein" />

</androidx.constraintlayout.widget.ConstraintLayout>